--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -29,6 +36,8 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cn.way.ViewListActivity" />
+        </activity>
+        <activity android:name=".net.AsynchronousHttpClientUsage" >
         </activity>
     </application>
 
