--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="cn.way.ViewListActivity"
+            android:name="cn.way.wandroid.ViewListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,15 +30,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="cn.way.ViewDetailActivity"
+            android:name= "cn.way.wandroid.ViewDetailActivity"
             android:label="@string/title_view_detail"
-            android:parentActivityName="cn.way.ViewListActivity" >
+            android:parentActivityName="cn.way.wandroid.ViewListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cn.way.ViewListActivity" />
+                android:value="cn.way.wandroid.ViewListActivity" />
         </activity>
-        <activity android:name=".net.AsynchronousHttpClientUsage" >
+        <activity android:name="cn.way.wandroid.net.AsynchronousHttpClientUsage" >
         </activity>
+        <activity android:name="cn.way.wandroid.json.GsonUsageActivity"></activity>
+        <activity android:name="cn.way.wandroid.data.greendao.GreenDaoUsage"></activity>
+        <activity android:name=".wandroid.lifemanager.LifeManagerUsage"></activity>
     </application>
 
 </manifest>
