--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,10 @@
         <activity android:name="cn.way.wandroid.activities.bulletin.BulletinUsage"></activity>
         <activity android:name="cn.way.wandroid.graphics.GraphicsUsage"></activity>
         <activity android:name="cn.way.wandroid.activities.dialog.DialogUsage"></activity>
+        <activity android:name="cn.way.wandroid.pullrefresh.PullToRefreshUsage"></activity>
+        <activity android:name="cn.way.wandroid.imageloader.displayingbitmaps.ui.ImageDetailActivity"></activity>
+        <activity android:name="cn.way.wandroid.imageloader.displayingbitmaps.ui.ImageGridActivity"></activity>
+        <activity android:name="cn.way.wandroid.imageloader.usage.ImageLoaderUsage"></activity>
     </application>
 
 </manifest>
