--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name="cn.way.wandroid.imageloader.displayingbitmaps.ui.ImageDetailActivity"></activity>
         <activity android:name="cn.way.wandroid.imageloader.displayingbitmaps.ui.ImageGridActivity"></activity>
         <activity android:name="cn.way.wandroid.imageloader.usage.ImageLoaderUsage"></activity>
+        <activity android:name="cn.way.wandroid.activities.tabhost.TabHostActivity"></activity>
     </application>
 
 </manifest>
