--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-19
 android.library.reference.1=..\\library
-android.library.reference.2=../social_sdk_library_project
+android.library.reference.2=..\\social_sdk_library_project
