--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -125,6 +125,7 @@
         <activity android:name=".animation.AnimationUsage"></activity>
         <activity android:name=".text.TextUseage"></activity>
         <activity android:name=".applation.ApplationInfoUsage"></activity>
+        <activity android:name=".activities.residemenu.ResideMenuUsage"></activity>
     </application>
 
 </manifest>
