--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-19
 android.library.reference.1=..\\library
 android.library.reference.2=..\\social_sdk_library_project
+android.library.reference.3=../ResideMenu
