--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </meta-data>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="GooglePlay" />
+            android:value="CHANEL_VALUE" />
         <!-- ###################注册SDK使用的Activity###################### -->
         <!-- 分享编辑页 -->
         <activity
@@ -128,6 +128,13 @@
         <activity android:name=".activities.residemenu.ResideMenuUsage"></activity>
         <activity android:name=".slidingmenu.usage.SlidingMenuUsage"></activity>
         <activity android:name=".shapeimageview.ShapeImageViewUsage"></activity>
+        <activity android:name=".imageloader.universal.UsageActivity"></activity>
+        <activity android:name=".openapi.AuthActivity">
+            <intent-filter android:icon="@drawable/ic_launcher"
+                android:label="Auth" android:logo="@drawable/ic_launcher">
+                <action android:name="cn.way.wandroid.intent.action.AUTH"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
