--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -76,7 +78,7 @@
         
         
         <activity
-            android:name="cn.way.wandroid.ViewListActivity"
+            android:name="cn.way.wandroid.UasgeListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -123,10 +125,11 @@
         <activity android:name=".imageloader.universal.UsageActivity"></activity>
         <activity android:name=".openapi.AuthActivity">
             <intent-filter android:icon="@drawable/ic_launcher"
-                android:label="Auth" android:logo="@drawable/ic_launcher">
+                android:label="Auth">
                 <action android:name="cn.way.wandroid.intent.action.AUTH"/>
             </intent-filter>
         </activity>
+        <activity android:name=".bluetooth.BluetoothUsage"></activity>
     </application>
 
 </manifest>
