--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <activity android:name=".bluetooth.BluetoothUsage"></activity>
         <activity android:name=".webview.WebviewUsage"></activity>
         <activity android:name=".bluetooth.im.MainActivity"></activity>
+        <activity android:name=".net.VolleyUsage"></activity>
     </application>
 
 </manifest>
