--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
         
         
         <activity
-            android:name="cn.way.wandroid.UasgeListActivity"
+            android:name="cn.way.wandroid.UsageListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -83,6 +83,7 @@
         <activity android:name=".webview.WebviewUsage"></activity>
         <activity android:name=".bluetooth.im.MainActivity"></activity>
         <activity android:name=".net.VolleyUsage"></activity>
+        <activity android:name=".activityadapter.PageAdapterActivity"></activity>
     </application>
 
 </manifest>
